--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ header {
     padding:10px;
     border: 5px solid black;
 }
+.leon-pic {
+    width:300px;
+    height:300px;
+    position:absolute;
+}
 .button1 {
     background-color:black;
     width:150px;
@@ -68,4 +73,16 @@ header {
 .startfparagraph {
     font-size:25px;
     margin-left: 100px;
+}
+body {
+    background-color:green;
+}
+footer {
+    background-color:black;
+    color:white;
+    padding:5px;
+    text-align:left;
+    width:100%;
+    height:100px;
+    
 }
